[#3618] Update to Quarkus 3.8
Updated to Quarkus 3.8.4, adapted unit tests to reflect changes in
behavior of Kafka and k8s client libraries.